[package]
name = "penplot"
version = "0.1.0"
authors = ["May Lawver <may@maycod.es>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.2"
clap = { version = "3.1.15", features = ["derive"] }
nom = "7.1.1"
fixed = "1.15.0"
